--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Gerard Asuncion">
+    <meta name="description" content="online book club app">
+    <meta name="keywords" content="react, api, tailwind, supabase, real-time, authentication, crud">
+    <link href="/src/style.css" rel="stylesheet">
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <title>online-book-club</title>
   </head>
   <body>
