--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="online book club app">
     <meta name="keywords" content="react, api, tailwind, supabase, real-time, authentication, crud">
     <link href="/src/style.css" rel="stylesheet">
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/books-icon.svg" />
     <title>online-book-club</title>
   </head>
   <body>
